# gibcite

./: Cargo.toml  README.md
dendron/: README.md  newbib.js
src/: lib.rs  main.rs  output.rs
tests/: cli.rs  mock.sql
tests/mock/: better-bibtex_citekey.json
