[package]
name = "gibcite"
version = "0.2.0"
edition = "2021"
authors = ["Marek S. Łukasiewicz <marek@lukasiewicz.tech>"]
description = "Give details of citation from local Zotero database"
readme = "README.md"
repository = "https://github.com/Maarrk/gibcite"
license = "AGPL-3.0-or-later"
license-file = "LICENSE.txt"
keywords = ["bibliography", "zotero"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
directories = "4.0"
exitcode = "1.1.2"
rusqlite = { version = "0.27.0", features = ["backup", "bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
assert_fs = "1.0"
